# syntheticRNASeq

./: .gitignore  README.md  pyproject.toml
PyPI/: README.md  SETUP.py  pyproject.toml  requirements.txt
PyPI/src/syntheticRNASeq/: __init__.py  syntheticRNASeq.py
src/syntheticRNASeq/: __init__.py
src/syntheticRNASeq.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
