[project]
name = "syntheticRNASeq"
version = "0.0"
authors = [
  { name="Theodoros Karalis", email="ttkaralis@gmail.com" },
]
description = "This package can be used to generate syntheticRNASeq data by sampling a negative binomial distribution."
readme = "README.md"
requires-python = ">=3.12.8"
classifiers = [
    "Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/ttkaralis/syntheticRNASeq"
Issues = "https://github.com/ttkaralis/syntheticRNASeq"

dependencies = [
    "numpy>=1.26.4",
    "pandas>=2.2.2",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = { find = { } }

[tool.setuptools.packages.find]
where = ["src"]
